--- a/src/server/templates/index.html
+++ b/src/server/templates/index.html
@@ -1,15 +1,10 @@
 <html>
   <head>
     <meta charset=utf-8 />
-    <title>BitCoin Ticker</title>
+    <title>BitCoin BlockChain Ticker</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.mapbox.com/mapbox.js/v3.2.0/mapbox.js'></script>
-    <link href='https://api.mapbox.com/mapbox.js/v3.2.0/mapbox.css' rel='stylesheet' />
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      L.mapbox.accessToken = 'pk.eyJ1IjoiZGFycm93bmV0IiwiYSI6ImNrMGFpd2NiNzAxYTczZG9kNDRvYzhneW4ifQ.s53k0nULzBIqe8sEfvroDw';
-    </script>
   </body>
 </html>
